# Cards

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: build_test.yaml
cards/: __init__.py  core.py  db.py
tests/: test_card.py  test_db.py  test_version.py
